--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,23 @@
 # Python
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
 *.log
 .venv/
 venv/
-env/
 
 # OS / IDE
 .DS_Store
 Thumbs.db
 .vscode/
-.idea/
 
-# Outputs / uploads / runtime data
+# Runtime data
 uploads/
 outputs/
-static/last.jpg
 *.db
 *.sqlite
-*.sqlite3
 
-# Model weights (nếu nặng thì KHÔNG nên đẩy thẳng)
-best*.pt
+# Model weights (YOLO)
 *.pt
 
-# Secrets / config local
+# Env
 .env
-.env.*
